# seneka_deployment_strategies

./: README.md
common/include/sensor_placement/: particle.h
common/src/: particle.cpp
include/sensor_placement/: sensor_placement_node.h
seneka_deployment_strategies/: CMakeLists.txt  package.xml
seneka_environments/: CMakeLists.txt
seneka_environments/aknz/: aknz.yaml
seneka_sensor_placement/: CMakeLists.txt  package.xml
seneka_sensor_placement/action/: README.md  sensorPlacement.action  test.action
seneka_sensor_placement/cfg/: seneka_sensor_placement.cfg
seneka_sensor_placement/common/include/seneka_sensor_placement/: greedySearch.h  particle.h  seneka_utilities.h  sensor_model.h
seneka_sensor_placement/common/src/: greedySearch.cpp  particle.cpp  seneka_utilities.cpp  sensor_model.cpp
seneka_sensor_placement/include/seneka_sensor_placement/: sensor_placement_action_server.h  sensor_placement_hypervisor.h  sensor_placement_interface.h  sensor_placement_node.h
seneka_sensor_placement/include/sensor_placement/: sensor_placement_node.h
seneka_sensor_placement/msg/: quanjo_maneuver.msg
seneka_sensor_placement/src/: sensor_placement_action_server.cpp  sensor_placement_hypervisor.cpp  sensor_placement_interface.cpp  sensor_placement_node.cpp
seneka_sensor_placement/srv/: README.md
seneka_sensor_placement/test/: aknz.yaml  sensor_placement_test_publisher.cpp  test.yaml  test_client.py  test_publisher.launch
seneka_strategies_bringup/: CMakeLists.txt  package.xml
seneka_strategies_bringup/components/: sensor_placement.xml
seneka_strategies_bringup/launch/: aknz_placement.launch  rviz.launch  rviz_aknz.launch  sensor_placement.launch  sensor_placement_itf.launch
seneka_strategies_config/: CMakeLists.txt  package.xml
seneka_strategies_config/config/: aknz.rviz  aknz_placement.yaml  seneka_rviz_groovy_config.rviz  sensor_placement.yaml
sensor_placement/common/include/sensor_placement/: seneka_utilities.h
sensor_placement/common/src/: particle.cpp
sensor_placement/include/sensor_placement/: sensor_placement_node.h
sensor_placement/src/: sensor_placement_node.cpp
src/: sensor_placement_node.cpp
